tdf#130105 Chart OOXML Import: Fix data label position

The position of datapoint labels was overwritten with the
position of series placement. Do not overwrite datapoint
labels placement, if we have explicit datapoint label placement.

Regression from commit: 70944a849dc59fa686e3f316a3983dbc8a47017f
(tdf#109858: Override default point label placement setting...)

Change-Id: Ic27c8a7eb93e8c3776389d1b3d285d120568f024
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87137
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>